--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <input type="password" id="code" placeholder="Entrez le code">
         <button onclick="checkCode()">Valider</button>
         <p id="error-message">Code incorrect, essayez encore !</p>
-        <img id="hidden-image" src="Confirmation.jpg" alt="Image cachée">
+        <img id="hidden-image" src="confirmation.jpg">
     </div>
 
     <script>
