--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page protégée</title>
+    <title>Code d'accès</title>
     <style>
         /* Mise en page générale */
         body {
@@ -11,7 +11,8 @@
             padding: 0;
             height: 100vh;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: flex-start; /* Aligner vers le haut */
             align-items: center;
             background: url('imagemontenvers.jpg') no-repeat center center fixed; /* Image de fond */
             background-size: cover;
@@ -28,6 +29,7 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             width: 100%;
             max-width: 400px; /* Limite la largeur du conteneur */
+            margin-top: 50px; /* Espace en haut */
         }
 
         /* Champ input et bouton */
@@ -90,13 +92,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Page protégée</h1>
-        <p>Veuillez entrer le code pour afficher l'image cachée :</p>
         <input type="password" id="code" placeholder="Entrez le code">
         <button onclick="checkCode()">Valider</button>
         <p id="error-message">Code incorrect, essayez encore !</p>
-        <img id="hidden-image" src="confirmation.jpg" alt="Image cachée">
     </div>
+
+    <img id="hidden-image" src="confirmation.jpg" alt="Image cachée">
 
     <script>
         function checkCode() {
